--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,10 @@ project:
   type: website
 
 website:
-  title: "Statistics with GPT friend"
+  title: "Learn statistics with AI"
   navbar:
     left:
       - href: index.qmd
-      - text: "Topics"
-        menu: 
-          - href: Topic1.qmd
-            text: Mathematics and Statistics
         
 
 format:
